# tech-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  calculator.cpp  calculator.h  logger.cpp  logger.h  main.cpp  notifier.cpp  notifier.h  pull_request_template.md  test.cpp  vcpkg.json
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-format-check.yml  clang-tidy.yml
components/: component.md
components/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
components/calculator/tests/: CMakeLists.txt  test_calculator.cpp
components/logger/: CMakeLists.txt  Logger.cpp  Logger.h
components/logger/tests/: CMakeLists.txt  test_logger.cpp
components/notifier/: CMakeLists.txt  Notifier.cpp  Notifier.h
components/notifier/tests/: CMakeLists.txt  test_notifier.cpp
include/: Notifier.h  logger.h
src/: component.md
src/calculator/: CMakeLists.txt  Calculator.cpp
src/calculator/include/tt/calculator/: Calculator.h
src/calculator/tests/: CMakeLists.txt  test_calculator.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/logger/include/tt/logger/: Logger.h
src/logger/tests/: CMakeLists.txt  test_logger.cpp
src/notifier/: CMakeLists.txt  Notifier.cpp
src/notifier/include/tt/notifier/: Notifier.h
src/notifier/tests/: CMakeLists.txt  test_notifier.cpp
tests/: test_calculator.cpp  test_e2e.cpp  test_logger.cpp  test_notifier.cpp
tests/e2e/: test_e2e.cpp
tests/integration/: test_calculator_logger.cpp  test_logger_notifier.cpp
